[package]
name = "rainbow-table"
version = "0.1.0"
authors = ["Alex Komissarov <k.a.komissar@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
md5 = "0.7.0"
argh = "0.1.4"
serde = { version = "1.0.117", features = ["derive"] }
bincode = "1.3.1"
snap = "1.0.1"
rayon = "1.5.0"
memmap = "0.7.0"
indicatif = "0.15.0"
rand = "0.7.3"
